<?xml version="1.0"?>
<package>
  <name>i2c_interface</name>
  <version>1.0.0</version>
  <description>
    The i2c_interface package provides ROS interface to I2C devices via
    topics and services. May be useful at times.
  </description>

  <maintainer email="YuryVeksler@gmail.com">Yury D.</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
